# AXON

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt
examples/iris_training/: CMakeLists.txt  main.cpp
examples/iris_training_python/: iris_training.py
include/axon/core/: Tensor.h  Tensor.tpp  TensorImpl.h  TensorImpl.tpp
include/axon/data/: CSVLoader.h
include/axon/loss/: CrossEntropyLoss.h  Loss.h  MSELoss.h
include/axon/nn/: Linear.h  Module.h  Serialization.h
include/axon/nn/activations/: ReLU.h  Sigmoid.h
include/axon/optimizers/: Adam.h  AdamW.h  Optimizer.h  RMSProp.h  SGD.h  SGDWithMomentum.h  StochasticGradientDescent.h
src/: bindings.cpp  main.cpp  tests.cpp
src/core/: CMakeLists.txt  Tensor.cpp  TensorImpl.cpp
src/data/: CMakeLists.txt  CSVLoader.cpp
src/loss/: CMakeLists.txt  CrossEntropyLoss.cpp  MSELoss.cpp
src/nn/: CMakeLists.txt  Linear.cpp  Module.cpp  Serialization.cpp
src/nn/activations/: ReLU.cpp  Sigmoid.cpp
src/optimizers/: Adam.cpp  AdamW.cpp  CMakeLists.txt  RMSProp.cpp  SGD.cpp  SGDWithMomentum.cpp  StochasticGradientDescent.cpp
